--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -26,11 +26,11 @@
     </parent>
     <groupId>nl.knaw.dans</groupId>
     <artifactId>dans-schema-rpm</artifactId>
-    <version>0.1.0</version>
+    <version>0.3.1-SNAPSHOT</version>
     <name>DANS XML Schemas RPM Build</name>
     <inceptionYear>2022</inceptionYear>
     <scm>
-        <tag>v0.1.0</tag>
+        <tag>HEAD</tag>
         <developerConnection>scm:git:ssh://github.com/DANS-KNAW/dans-schema</developerConnection>
     </scm>
 
