--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -26,11 +26,11 @@
     </parent>
     <groupId>nl.knaw.dans</groupId>
     <artifactId>dans-schema</artifactId>
-    <version>0.3.1</version>
+    <version>0.3.2-SNAPSHOT</version>
     <name>DANS XML Schemas Resource JAR</name>
     <inceptionYear>2022</inceptionYear>
     <scm>
-        <tag>v0.3.1</tag>
+        <tag>HEAD</tag>
         <developerConnection>scm:git:ssh://github.com/DANS-KNAW/dans-schema</developerConnection>
     </scm>
     <repositories>
