--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -25,7 +25,7 @@
         <relativePath />
     </parent>
     <groupId>nl.knaw.dans</groupId>
-    <artifactId>dans-schema</artifactId>
+    <artifactId>dans-schema-lib</artifactId>
     <version>0.3.2-SNAPSHOT</version>
     <name>DANS XML Schemas Resource JAR</name>
     <inceptionYear>2022</inceptionYear>
