Renamed the RPM to dans-schema and the JAR to dans-schema-lib to avoid confusion in dd-dtap

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 
     <modules>
         <module>rpm</module>
-        <module>schemas</module>
+        <module>lib</module>
     </modules>
 </project>
 
