--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -26,11 +26,11 @@
     </parent>
     <groupId>nl.knaw.dans</groupId>
     <artifactId>dans-schema-lib</artifactId>
-    <version>0.4.0</version>
+    <version>0.4.1-SNAPSHOT</version>
     <name>DANS XML Schemas Resource JAR</name>
     <inceptionYear>2022</inceptionYear>
     <scm>
-        <tag>v0.4.0</tag>
+        <tag>HEAD</tag>
         <developerConnection>scm:git:ssh://github.com/DANS-KNAW/dans-schema</developerConnection>
     </scm>
     <repositories>
