Changed install dir rpm to schemas.datastations.nl

--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -130,7 +130,7 @@
                             <group>Applications/Archiving</group>
                             <mappings combine.self="override">
                                 <mapping>
-                                    <directory>/var/www/html/schemas</directory>
+                                    <directory>/var/www/html/schemas.datastations.nl</directory>
                                     <sources>
                                         <source>
                                             <location>${project.build.directory}/schemas/</location>
