--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -113,7 +113,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>rpm-maven-plugin</artifactId>
-                        <configuration>
+                        <configuration combine.self="override">
                             <group>Applications/Archiving</group>
                             <mappings combine.self="override">
                                 <mapping>
