Migrating to dd-parent as parent pom (#10)
* Migrating to dd-parent as parent pom

* WIP

* Solved license warning for 'version' file

* Upgraded parent pom

* Made .keepme file for rpm scriptlets dir unnecessary

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -19,12 +19,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>nl.knaw.dans.shared</groupId>
-        <artifactId>dans-mvn-plugin-defaults</artifactId>
-        <version>9.5.0</version>
+        <groupId>nl.knaw.dans</groupId>
+        <artifactId>dd-parent</artifactId>
+        <version>0.10.0</version>
         <relativePath />
     </parent>
-    <groupId>nl.knaw.dans</groupId>
     <artifactId>dans-schema-lib</artifactId>
     <version>0.6.1-SNAPSHOT</version>
     <name>DANS XML Schemas Resource JAR</name>
@@ -33,6 +32,7 @@
         <tag>HEAD</tag>
         <developerConnection>scm:git:ssh://github.com/DANS-KNAW/dans-schema</developerConnection>
     </scm>
+
     <repositories>
         <repository>
             <id>DANS</id>
@@ -59,15 +59,9 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration combine.children="append">
                     <excludes combine.self="override">
-                        <exclude>src/main/resources/extern/*.xsd</exclude>
-                        <exclude>src/main/resources/extern/**/*.xsd</exclude>
+                        <exclude>src/main/resources/extern/**</exclude>
+                        <exclude>src/main/resources/version</exclude>
                     </excludes>
-                    <includes>
-                        <include>pom.xml</include>
-                        <include>src/test/scala/**</include>
-                        <include>src/main/resources/**/*.xsd</include>
-                        <include>src/main/resources/**/*.xml</include>
-                    </includes>
                 </configuration>
             </plugin>
         </plugins>
