Correct amd.xsd version. Corrected RPM config

--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -16,13 +16,14 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>nl.knaw.dans</groupId>
         <artifactId>dd-parent</artifactId>
         <version>0.11.0</version>
-        <relativePath />
+        <relativePath/>
     </parent>
     <artifactId>dans-schema</artifactId>
     <version>0.7.1-SNAPSHOT</version>
@@ -115,6 +116,17 @@
                         <artifactId>rpm-maven-plugin</artifactId>
                         <configuration combine.self="override">
                             <group>Applications/Archiving</group>
+                            <release>${rpm-release}</release>
+                            <vendor>${dans-provider-name}</vendor>
+                            <packager>${dans-provider-name}</packager>
+                            <name>${dans-provider-name}-${project.artifactId}</name>
+                            <defaultUsername>root</defaultUsername>
+                            <defaultGroupname>root</defaultGroupname>
+                            <license>Apache 2.0</license>
+                            <targetOS>Linux</targetOS>
+                            <defaultFilemode>744</defaultFilemode>
+                            <defaultDirmode>755</defaultDirmode>
+
                             <mappings combine.self="override">
                                 <mapping>
                                     <directory>/var/www/html/schemas.datastations.nl</directory>
