Updated GitHub actions. See: https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,9 +1,9 @@
 # configuration for authorized and required reviewers
-* @dataversedans-leads
+* @DANS-KNAW/dataversedans-leads
 
 # code
 # no overrides
 
 # policies
-/.github/PULL_REQUEST_TEMPLATE.md @DANS-KNAW/@dataversedans-leads
-/.github/CODEOWNERS @DANS-KNAW/@dataversedans-leads
+/.github/PULL_REQUEST_TEMPLATE.md @DANS-KNAW/dataversedans-leads
+/.github/CODEOWNERS @DANS-KNAW/dataversedans-leads
