--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ repo_url: https://github.com/DANS-KNAW/dans-schema
 
 nav:
   - Manual: index.md
+  - ⇒ DANS Data Station Architecture: arch.md
 
 plugins:
   - markdownextradata
