--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -25,11 +25,11 @@
         <relativePath />
     </parent>
     <artifactId>dans-schema</artifactId>
-    <version>0.14.1-SNAPSHOT</version>
+    <version>0.15.0</version>
     <name>DANS XML Schemas RPM Build</name>
     <inceptionYear>2022</inceptionYear>
     <scm>
-        <tag>HEAD</tag>
+        <tag>v0.15.0</tag>
         <developerConnection>scm:git:ssh://github.com/DANS-KNAW/dans-schema</developerConnection>
     </scm>
 
